Amino acid mutation search API
